--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "dev:node": "node script/run-dev.cjs",
     "build": "tsx script/build.ts",
+    "build:deploy": "rm -rf dist && npm run build",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push"
