Enhance landing page layout for better responsiveness and update Stripe product management logic. Adjusted image container sizes for improved display on various screen sizes. Refactored product creation and pricing logic to ensure the HunterOS Pro product and its associated prices are correctly initialized in Stripe on server startup.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:deploy": "rm -rf dist && npm run build",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "seed:stripe": "tsx script/seed-stripe.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.19.0",
